--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <header></header>
     <main>
         <div class="doors doors_left">
             <button>Projects</button>
