--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 
 <body>
-
     <header></header>
-    <main>
+
+    <div>
         <div class="doors doors_left">
             <button>Projects</button>
         </div>
         <div class="doors doors_right">
             <button>About</button>
         </div>
+    </div>
+    <main>
     </main>
 </body>
 
