--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 <body>
     <header></header>
 
-    <div>
+    <div id="doors_container">
         <div class="doors doors_left">
             <button>Projects</button>
         </div>
         <div class="doors doors_right">
             <button>About</button>
+        </div>
+        <div class="doors_top">
+            <p>Change</p>
+        </div>
+        <div class="doors_bottom">
+            <p>In progress</p>
         </div>
     </div>
     <main>
