new animations and transition

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <header></header>
-
     <div id="doors_container">
         <div class="doors doors_left">
             <button>Projects</button>
@@ -21,14 +20,13 @@
             <button>About</button>
         </div>
         <div class="doors_top">
-            <p>Change</p>
+            <p class="text-transition"></p>
         </div>
         <div class="doors_bottom">
-            <p>In progress</p>
+            <p class="text-transition"></p>
         </div>
     </div>
-    <main>
-    </main>
+    <main></main>
 </body>
 
 </html>
