--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./script.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="./assets/img/logoDark.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio Antho</title>
 </head>
